[package]
name = "contract-new"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract_new"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-spl = "0.31.1"
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
pyth-sdk-solana = "0.10.5" 
hex = "0.4.3"
hex-literal = "0.4.1"

